[project]
name = "softball-next-play-quiz"
version = "0.1.0"
description = "A Flet app for practicing softball play decisions by game situation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "flet[cli,web]>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
